--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p>Select the type of investor you are below.</p>
                 <div class="type">
                     <div class="type--wrapper" id="ch-1">
-                        <input class="type__input" type="radio" id="choice1" value="Individual" name="choice" checked>
+                        <input class="type__input" type="radio" id="choice1" value="Individual" name="choice">
                         <label for="choice1">Individual</label>
                         <span class="type__icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="#AFAFAF"
@@ -121,26 +121,12 @@
               </span>
                     </div>
                 </div>
-                <div class="type__description" id="ds-1">I am a natural person investing on my own behalf as a
+                <div class="type__description" id="ds-2">I am a natural person investing on my own behalf as
+                    a
                     sole
                     owner,
                     joint tenant, or tenant in common
                 </div>
-                <!--                <div class="type__description" id="ds-2">I am a natural person investing on my own behalf as a-->
-                <!--                    sole-->
-                <!--                    owner,-->
-                <!--                    joint tenant, or tenant in common-->
-                <!--                </div>-->
-                <!--                <div class="type__description" id="ds-3">I am a natural person investing on my own behalf as a-->
-                <!--                    sole-->
-                <!--                    owner,-->
-                <!--                    joint tenant, or tenant in common-->
-                <!--                </div>-->
-                <!--                <div class="type__description" id="ds-4">I am a natural person investing on my own behalf as a-->
-                <!--                    sole-->
-                <!--                    owner,-->
-                <!--                    joint tenant, or tenant in common-->
-                <!--                </div>-->
                 <div>
                     <label for="agree" class="agree"><input type="checkbox" id="agree">
                         <p>I agree to the terms and
