--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <p>I agree to the terms and
                             receiving
                             notifications
-                            from iintoo <a href="#">View full terms</a></p></label>
+                            from iintoo <a href="#" target="_blank">View full terms</a></p></label>
                 </div>
                 <button type="submit">Create Account</button>
             </form>
